[gd_scene load_steps=6 format=2]

[ext_resource path="res://screens/popUps/wrongAnswerPopUp.gd" type="Script" id=1]
[ext_resource path="res://sprites/images/button.png" type="Texture" id=2]
[ext_resource path="res://sprites/images/whiteBackground.png" type="Texture" id=3]
[ext_resource path="res://sprites/texts/WrongAnswer.png" type="Texture" id=4]


[sub_resource type="Animation" id=1]
resource_name = "openUp"
tracks/0/type = "value"
tracks/0/path = NodePath("BlackBackground:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("opt1:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("opt1/ouvirAgain:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("opt1/Sprite2:self_modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("opt2:self_modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("opt2/keepPlaying:self_modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("opt2/Sprite3:self_modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Sprite:self_modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Node2D" type="Node2D"]
position = Vector2( 311.46, 479.467 )
script = ExtResource( 1 )

[node name="BlackBackground" type="ColorRect" parent="."]
margin_left = -314.0
margin_top = -480.0
margin_right = 715.0
margin_bottom = 121.0
color = Color( 0, 0, 0, 0.905882 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/openUp = SubResource( 1 )

[node name="opt1" type="ColorRect" parent="."]
margin_left = -123.0
margin_top = -181.0
margin_right = 195.0
margin_bottom = -127.0
color = Color( 1, 1, 1, 0.478431 )

[node name="ouvirAgain" type="TouchScreenButton" parent="opt1"]
self_modulate = Color( 1, 1, 1, 0 )
position = Vector2( 0.995422, 0.435059 )
scale = Vector2( 0.896313, 0.69979 )
normal = ExtResource( 2 )

[node name="Sprite2" type="Sprite" parent="opt1"]
position = Vector2( 160.397, 27.6889 )
scale = Vector2( 0.314791, 0.133899 )
texture = ExtResource( 3 )

[node name="opt2" type="ColorRect" parent="."]
margin_left = 238.0
margin_top = -180.0
margin_right = 577.0
margin_bottom = -127.0
color = Color( 1, 1, 1, 0.478431 )

[node name="keepPlaying" type="TouchScreenButton" parent="opt2"]
self_modulate = Color( 1, 1, 1, 0 )
position = Vector2( -0.00198364, -0.564941 )
scale = Vector2( 0.961469, 0.69979 )
normal = ExtResource( 2 )

[node name="Sprite3" type="Sprite" parent="opt2"]
position = Vector2( 169.868, 26.3397 )
scale = Vector2( 0.330547, 0.132456 )
texture = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 227.424, -203.502 )
scale = Vector2( 0.254305, 0.254305 )
texture = ExtResource( 4 )

[connection signal="pressed" from="opt1/ouvirAgain" to="." method="_on_ouvirAgain_pressed"]
[connection signal="pressed" from="opt2/keepPlaying" to="." method="_on_keepPlaying_pressed"]
